
This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Enhancements::

* allow footnotes to be placed directly below last block of content if `footnotes_margin_top` theme key is 0 (#2291)
* allow page break to be forced using `always` option (e.g., `[%always]`) (#2300)

Bug Fixes::

* apply text transform and formatting when checking height of heading for orphan prevention
* apply text transform and formatting when computing height of background for caption

Compliance::

* remove support for deprecated `spread` role on table

== 2.2.0 (2022-07-22) - @mojavelinux

Enhancements::

* allow page background image to be specified per layout using `+{page-layout}+` attribute reference in path (#1739)
* allow page margin for rotated page to be configured independently using `page-margin-rotated` theme key or `pdf-page-margin-rotated` document attribute (#1719)
* allow orphan detection to be enabled for all section titles and discrete headings by setting `heading-min-height-after` to `auto` in theme (#2268)
* set `docimagesdir` attribute when attribute substitutions are applied to value from theme (#2278)
* start page numbering and running content on empty verso page before first chapter of prepress book if `start-at` value is 0 (#2252)
* don't force page break after TOC with automatic placement in article if `title-page` attribute is set and value of `toc-break-after` theme key is `auto` (#1768)
* add `--theme` option to CLI as shorthand for `-a pdf-theme` (#2250)
* add `--sourcemap` option to CLI to enable `:sourcemap` option on processor (#2265)
* broaden support for relative font sizes in theme to more than just inline elements; document support for relative font sizes
* allow theme to control font properties of marker for ordered list using `olist-marker` category (#2279)