@@ -10,7 +10,8 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Enhancements::
 
 * allow footnotes to be placed directly below last block of content if `footnotes_margin_top` theme key is 0 (#2291)
-* allow page break to be forced using `always` option (e.g., `[%always]`) (#2300)
+* insert column break instead of page break in multi-column layout if `column` role is specified on page break macro (#2293)
+* allow page / column break to be forced using `always` option (e.g., `[%always]`) (#2300)
 
 Bug Fixes::
 
